// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaseDetail Component should render closed 1`] = `
.container {
  display: inline-block;
  font-size: 12px;
}

.button-box {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0 7px;
  line-height: 32px;
  color: #D5DEF1;
  background-color: #FFF;
  border: 1px solid rgba(213, 222, 241, 0.25);
  border-radius: 5px;
}

.buttonWrapper {
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  -webkit-box-align: center;
  -ms-flex-align: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-align-items: center;
  align-items: center;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.caret {
  margin-left: 10px;
}

.dropdownContainer {
  position: relative;
}

<div
  className="container"
>
  <div>
    <button
      className="button-box"
      onClick={[Function]}
      type="button"
    >
      <span
        className="buttonWrapper"
      >
        dropdown
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-chevron-down fa-w-14 fa-sm caret"
          data-icon="chevron-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
    </button>
    <div
      className="dropdownContainer"
    />
  </div>
</div>
`;

exports[`CaseDetail Component should render with initial value 1`] = `
.container {
  display: inline-block;
  font-size: 12px;
}

.button-box {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0 7px;
  line-height: 32px;
  color: #D5DEF1;
  background-color: #FFF;
  border: 1px solid rgba(213, 222, 241, 0.25);
  border-radius: 5px;
}

.buttonWrapper {
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  -webkit-box-align: center;
  -ms-flex-align: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-align-items: center;
  align-items: center;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.dropdownContainer {
  position: relative;
}

.chip {
  cursor: pointer;
  padding-left: 7px;
}

.caret-caretRotate {
  margin-left: 10px;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.dropdownBody-box {
  position: absolute;
  left: 0px;
  top: 5px;
  min-width: 100%;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  background: #FFF;
  padding: 12px;
  box-shadow: 0 1px 5px 0 rgba(213, 222, 241, 0.25);
  z-index: 300;
  border: 1px solid rgba(213, 222, 241, 0.25);
  border-radius: 5px;
}

.option {
  -webkit-box-align: center;
  -ms-flex-align: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-align-items: center;
  align-items: center;
  cursor: pointer;
  margin-bottom: 10px;
}

.optionLabel {
  display: inline-block;
  margin-left: 7px;
  text-transform: initial;
  white-space: nowrap;
}

.clear {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 10px 0 0;
  border: 0px;
  font-size: 14px;
  font-weigh: 300px;
  background: transparent;
  color: #D5DEF1;
  cursor: pointer;
}

.block-checkboxType {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  position: relative;
  outline: 0px;
  cursor: pointer;
  width: 18px;
  height: 18px;
  display: inline-block;
}

.block-checkboxType:checked:before {
  background-color: #000;
  border: 1px solid #000;
}

.block-checkboxType:checked:after {
  background-position: center;
  background-size: cover;
  background-image: url(check.svg);
}

.block-checkboxType:disabled {
  opacity: 0.45;
}

.block-checkboxType:before {
  content: "";
  position: absolute;
  display: block;
  width: 18px;
  height: 18px;
  border: 1px solid rgba(213, 222, 241, 0.7);
  border-radius: 4px;
}

.block-checkboxType:after {
  content: "";
  position: absolute;
  display: block;
  width: 18px;
  height: 18px;
  border: 1px solid transparent;
  border-radius: 4px;
}

<div
  className="container"
>
  <div>
    <button
      className="button-box"
      onClick={[Function]}
      type="button"
    >
      <span
        className="buttonWrapper"
      >
        dropdown
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-chevron-down fa-w-14 fa-sm caret-caretRotate"
          data-icon="chevron-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
    </button>
    <span
      className="chip"
      data-testid="chip"
      onClick={[Function]}
    >
      one
       
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-11 "
        data-icon="times"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 352 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </span>
    <div
      className="dropdownContainer"
    >
      <div
        className="dropdownBody-box"
      >
        <div
          className="option"
          data-testid="dropdown-option"
          onClick={[Function]}
        >
          <input
            checked={true}
            className="block-checkboxType"
            disabled={false}
            readOnly={true}
            type="checkbox"
          />
          <span
            className="optionLabel"
          >
            1
          </span>
        </div>
        <div
          className="option"
          data-testid="dropdown-option"
          onClick={[Function]}
        >
          <input
            checked={false}
            className="block-checkboxType"
            disabled={false}
            readOnly={true}
            type="checkbox"
          />
          <span
            className="optionLabel"
          >
            2
          </span>
        </div>
        <button
          className="clear"
          onClick={[Function]}
          type="button"
        >
          Clear
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`CaseDetail Component should render without showing chips 1`] = `
.container {
  display: inline-block;
  font-size: 12px;
}

.button-box {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0 7px;
  line-height: 32px;
  color: #D5DEF1;
  background-color: #FFF;
  border: 1px solid rgba(213, 222, 241, 0.25);
  border-radius: 5px;
}

.buttonWrapper {
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  -webkit-box-align: center;
  -ms-flex-align: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-align-items: center;
  align-items: center;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.caret {
  margin-left: 10px;
}

.dropdownContainer {
  position: relative;
}

<div
  className="container"
>
  <div>
    <button
      className="button-box"
      onClick={[Function]}
      type="button"
    >
      <span
        className="buttonWrapper"
      >
        dropdown (1)
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-chevron-down fa-w-14 fa-sm caret"
          data-icon="chevron-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
    </button>
    <div
      className="dropdownContainer"
    />
  </div>
</div>
`;
